<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Navigation -->
    <string name="login_label">Login</string>
    <string name="welcome_label">Welcome!</string>
    <string name="instructions_label">Instructions</string>
    <string name="shoe_list_label">Shoe Store</string>
    <string name="shoe_detail_label">Add new Shoe</string>

    <!-- Login fragment -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="error_message">Please, fill the entry</string>

    <!-- Welcome fragment -->
    <string name="arg_user_email">userEmail</string>
    <string name="welcome_text">Welcome,\n%s!</string>
    <string name="welcome_description">We are glad that now\nyou are part of our shoe store!</string>
    <string name="instructions_button">Read instructions</string>

    <!-- Instructions fragment -->
    <string name="title_text">GUIDELINES</string>
    <string name="instructions_text">This app is a shoe store, where you can record as many shoe items as you want.
    The main screen consists of a list of shoe items: from that screen, you can click the "add" button to add a new shoe item to the list.
    Before using the app, you need to register with a new login or to login with an existing user.</string>
    <string name="begin_text">Start adding items!\nClick the button to begin.</string>
    <string name="start_button">Start</string>

    <!-- Shoe List fragment -->
    <string name="scroll_content">List of shoes</string>
    <string name="fab_content">Add a new shoe item</string>
    <string name="logout_menu_option">Logout</string>
    <string name="logout_menu_content">Click to logout</string>

    <!-- Shoe Detail fragment -->
    <string name="shoe_name_text">Shoe Name</string>
    <string name="shoe_company_text">Company</string>
    <string name="shoe_size_text">Size</string>
    <string name="shoe_description_text">Description</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <!-- Item List view -->
    <string name="company_title_text">%s   %s</string>
    <string name="size_text">Size: %f</string>

</resources>
