<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="instructionsFragment"
            type="com.udacity.shoestore.ui.InstructionsFragment" />
    </data>


    <!-- LinearLayout has been chosen: the reason is the same as commented in fragment_welcome.xml
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/page_padding">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/narrow_margin"
            android:gravity="center_horizontal"
            android:text="@string/title_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_heading" />

        <TextView
            android:id="@+id/instructions_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wide_margin"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/narrow_margin"
            android:paddingEnd="@dimen/narrow_margin"
            android:text="@string/instructions_text"
            android:textColor="?attr/colorOutline"
            android:textSize="@dimen/text_body" />

        <TextView
            android:id="@+id/begin_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginBottom="@dimen/wide_margin"
            android:gravity="center_horizontal"
            android:text="@string/begin_text"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_important" />

        <Button
            android:id="@+id/start_button"
            style="@style/MainButton"
            android:onClick="@{() -> instructionsFragment.start()}"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/start_button" />

    </LinearLayout>
</layout>