<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeDetailFragment"
            type="com.udacity.shoestore.ui.ShoeDetailFragment" />
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodels.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding">


        <!-- NAME -->

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/narrow_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:gravity="end"
            android:text="@string/shoe_name_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_body"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_inputLayout"
            app:layout_constraintEnd_toStartOf="@+id/name_inputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/name_textView"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/text_body"
                android:text="@={viewModel.shoeNameEntry}"
                tools:text="L.A. Trainers" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- COMPANY -->

        <TextView
            android:id="@+id/company_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/narrow_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:gravity="end"
            android:text="@string/shoe_company_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_body"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_inputLayout"
            app:layout_constraintEnd_toStartOf="@+id/company_inputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/company_textView"
            app:layout_constraintTop_toBottomOf="@+id/name_inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/text_body"
                android:text="@={viewModel.shoeCompanyEntry}"
                tools:text="Adidas" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- SIZE -->

        <TextView
            android:id="@+id/size_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/narrow_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:gravity="end"
            android:text="@string/shoe_size_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_body"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_inputLayout"
            app:layout_constraintEnd_toStartOf="@+id/size_inputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/size_textView"
            app:layout_constraintTop_toBottomOf="@+id/company_inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_body"
                android:text='@={viewModel.shoeSizeEntry}'
                tools:text="43" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- DESCRIPTION -->

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/narrow_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:gravity="end"
            android:text="@string/shoe_description_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_body"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_inputLayout"
            app:layout_constraintEnd_toStartOf="@+id/description_inputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/description_textView"
            app:layout_constraintTop_toBottomOf="@+id/size_inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:textSize="@dimen/text_body"
                android:text="@={viewModel.shoeDescriptionEntry}"
                tools:text="Optimal for every-day walks" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- Buttons -->

        <Button
            android:id="@+id/cancel_button"
            style="@style/OppositeButton"
            android:onClick="@{() -> shoeDetailFragment.cancel()}"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_inputLayout" />

        <Button
            android:id="@+id/save_button"
            style="@style/MainButton"
            android:onClick="@{() -> shoeDetailFragment.save()}"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>